theme color change

--- a/app/globals.css
+++ b/app/globals.css
@@ -249,7 +249,7 @@ body {
 .cl-formButtonPrimary:hover,
 .cl-formButtonPrimary:focus,
 .cl-formButtonPrimary:active {
-  background-color: #705CF7
+  background-color: #0171d2
 }
 
 /* ========================================== REACT-DATEPICKER STYLES */
@@ -265,11 +265,11 @@ body {
 }
 
 .react-datepicker__day--selected {
-  background-color: #624cf5 !important;
+  background-color: #0171e3 !important;
   color: #ffffff !important;
   border-radius: 4px;
 }
 
 .react-datepicker__time-list-item--selected {
-  background-color: #624cf5 !important;
+  background-color: #0171e3 !important;
 }
